--- a/home-page.html
+++ b/home-page.html
@@ -11,18 +11,18 @@
     <nav>
         <ul id="nav-list">
             <li class="active-page"><a href="home-page.html">Home</a></li>
-            <li><a href="aboutme-page.html">AboutMe</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog-page.html">Blog</a></li>
+            <li><a href="pages/aboutme-page.html">AboutMe</a></li>
+            <li><a href="pages/projects.html">Projects</a></li>
+            <li><a href="pages/blog-page.html">Blog</a></li>
         </ul>
-        <a href="contact-me.html">
+        <a href="pages/contact-me.html">
             <button id="contact-button">Contact Me</button>
         </a>
-        <div class="menu-toggle" id="toggle-button">
+        <!-- <div class="menu-toggle" id="toggle-button">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </div> -->
     </nav>
     <div class="container" id="home-page">
         <div class="home-desc">
