--- a/pages/aboutme-page.html
+++ b/pages/aboutme-page.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav>
-        <ul>
-            <li><a href="home-page.html">Home</a></li>
-            <li class="active-page"><a href="aboutme-page.html">AboutMe</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="blog-page.html">Blog</a></li>
+        <ul id="nav-list">
+            <li class="active-page"><a href="home-page.html">Home</a></li>
+            <li><a href="pages/aboutme-page.html">AboutMe</a></li>
+            <li><a href="pages/projects.html">Projects</a></li>
+            <li><a href="pages/blog-page.html">Blog</a></li>
         </ul>
-        <a href="contact-me.html">
+        <a href="pages/contact-me.html">
             <button id="contact-button">Contact Me</button>
         </a>
     </nav>
