--- a/contact-me.html
+++ b/contact-me.html
@@ -10,12 +10,12 @@
 <body>
     <nav>
         <ul id="nav-list">
-            <li class="active-page"><a href="home-page.html">Home</a></li>
-            <li><a href="pages/aboutme-page.html">AboutMe</a></li>
-            <li><a href="pages/projects.html">Projects</a></li>
-            <li><a href="pages/blog-page.html">Blog</a></li>
+            <li class="active-page"><a href="index.html">Home</a></li>
+            <li><a href="aboutme-page.html">AboutMe</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="blog-page.html">Blog</a></li>
         </ul>
-        <a href="pages/contact-me.html">
+        <a href="contact-me.html">
             <button id="contact-button">Contact Me</button>
         </a>
     </nav>
