modified style.css and script.js path at html

--- a/contact-me.html
+++ b/contact-me.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/icon-html.svg">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Fitri's Personal Website</title>
 </head>
 <body>
@@ -50,5 +50,6 @@
         </div>
         <div class="copyright">2023 &copy Sri Fitri Yani Nurhasanah</div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
