add link project to project.html

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                     <div class="project-detail">
                         <h2 class="project-title">Personal Web</h2>
                         <p class="project-subtitle">A website to you who want to know about me more.</p>
-                        <a href="#">Go to Website</a>
+                        <a href="https://srifitriyn-personal-web.netlify.app/">Go to Website</a>
                     </div>
                 </div>
                 <div class="project-box">
@@ -37,7 +37,7 @@
                     <div class="project-detail">
                         <h2 class="project-title">BMI Calculator</h2>
                         <p class="project-subtitle">Measure your Body Mass Index and know your categorizes BMI based on provided information from WHO and CDC.</p>
-                        <a href="#">Go to Website</a>
+                        <a href="https://srifitriyn-bmi-calculator.netlify.app/">Go to Website</a>
                     </div>
                 </div>
                 <div class="project-box">
@@ -45,7 +45,7 @@
                     <div class="project-detail">
                         <h2 class="project-title">Bookshelf</h2>
                         <p class="project-subtitle">It’s a web project for storing a books. But I haven't finished it yet except the UI.</p>
-                        <a href="#">View on Github</a>
+                        <a href="https://github.com/srifitriyn/bookshelf.git">View on Github</a>
                     </div>
                 </div>
                 <div class="project-box">
@@ -53,7 +53,7 @@
                     <div class="project-detail">
                         <h2 class="project-title">Stray Kids Website</h2>
                         <p class="project-subtitle">A simple website landing page about K-Pop Group Stray Kids. It was a project for my assignment and was my first ever website project. </p>
-                        <a href="#">View on Github</a>
+                        <a href="https://github.com/srifitriyn/skz-page.git">View on Github</a>
                     </div>
                 </div>
             </div>
