replacing filter for active page

--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <ul id="nav-list">
-            <li class="active-page"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="aboutme-page.html">AboutMe</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li class="active-page"><a href="projects.html">Projects</a></li>
             <li><a href="blog-page.html">Blog</a></li>
         </ul>
         <a href="contact-me.html">
