--- a/aboutme-page.html
+++ b/aboutme-page.html
@@ -10,8 +10,8 @@
 <body>
     <nav>
         <ul id="nav-list">
-            <li class="active-page"><a href="index.html">Home</a></li>
-            <li><a href="aboutme-page.html">AboutMe</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active-page"><a href="aboutme-page.html">AboutMe</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="blog-page.html">Blog</a></li>
         </ul>
